<resources>
    <string name="app_name">Lista de Palestrantes</string>
    <string name="txt_listagem">Listagem</string>
    <string name="txt_cadastro">Cadastro</string>
    <string name="txt_palestrante">Palestrante</string>
    <string name="txt_tecnologia">Tecnologia</string>
    <string name="txt_topico">Tópico</string>
    <string name="txt_salvar">Salvar</string>
    <string name="txt_apagar">Apagar</string>
</resources>